--- a/Makefile_netlib
+++ b/Makefile_netlib
@@ -6,43 +6,36 @@ local_path = $(HOME)/local
 
 cpp_sources = \
 	Analyze.cpp \
-	Auxiliary.cpp \
-	Factorize.cpp \
+	Aux_analyze.cpp \
 	Symbolic.cpp \
-	test.cpp
-
-c_sources = \
-	PartialFact.c
+	netlib_test.cpp
 
 # binary file name
-binary_name = fact
+binary_name = netlib_test
 
 # object files directory
 objdir = obj
 
 # compilers
 CPP = clang++
-CC = clang
 
 # compiler flags
-CPPFLAGS = -std=c++11 -g3 -Wno-deprecated
-CFLAGS = -g3
+CPPFLAGS = -std=c++11 -O3 -Wno-deprecated
 
 # includes and libraries
 includes = -I$(highs_path)/build -I$(highs_path)/src/ -I$(metis_path)/include -I$(local_path)/include
 libs_path = -L$(highs_path)/build/lib -L$(metis_path)/build/libmetis -L$(local_path)/lib
-libs = -lhighs -lmetis -lGKlib -llapack -lblas
+libs = -lhighs -lmetis -lGKlib -llapack
 
 # name of objects
 cpp_objects = $(cpp_sources:%.cpp=$(objdir)/%.o)
-c_objects = $(c_sources:%.c=$(objdir)/%.o)
 
 # dependency files
 dep = $(cpp_sources:%.cpp=$(objdir)/%.d)
 
 
 # link
-$(binary_name): $(cpp_objects) $(c_objects)
+$(binary_name): $(cpp_objects)
 	@echo Linking objects into $@
 	@$(CPP) $(CPPFLAGS) $(libs_path) $(libs) $^ -o $@
 
@@ -54,12 +47,6 @@ $(cpp_objects): $(objdir)/%.o: %.cpp
 	@echo Compiling $<
 	@mkdir -p $(@D)
 	@$(CPP) -MMD -c $(CPPFLAGS) $(includes) $< -o $@
-
-# compile c
-$(c_objects): $(objdir)/%.o: %.c
-	@echo Compiling $<
-	@mkdir -p $(@D)
-	@$(CC) -MMD -c $(CFLAGS) $(includes) $< -o $@
 
 
 .PHONY : clean
